<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_menuItems_enable"
            android:title="@string/enable" />
        <item
            android:id="@+id/item_menuItems_registerAutoTime"
            android:title="@string/autoDate" />
        <item
            android:id="@+id/item_menuItems_registerHandTime"
            android:title="@string/handDate" />

        <item
            android:id="@+id/subHeader"
            android:title="">

            <menu>

                <item
                    android:id="@+id/item_menuItems_visitDateMyWork"
                    android:title="@string/visitDateMyWork" />
                <item
                    android:id="@+id/item_menuItems_addEmployeeToEmployer"
                    android:title="@string/addEmployer" />
                <item
                    android:id="@+id/item_menuItems_visitEmployer"
                    android:title="@string/visitEmployer" />

                <item
                    android:id="@+id/item_menuItems_visitWorkEmployee"
                    android:title="@string/visitWorkEmployee" />
            </menu>

        </item>

        <item
            android:id="@+id/subHeader1"
            android:title="">

            <menu>
                <item
                    android:id="@+id/settings"
                    android:title="@string/settings"/>
                <item
                    android:id="@+id/item_menuItems_aboutUs"
                    android:title="@string/aboutUs" />

                <item
                    android:id="@+id/item_menuItems_exit"
                    android:title="@string/exit" />

            </menu>

        </item>


    </group>

</menu>