<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kamal.saatzanhamrah.AboutUsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="5">


            <ImageView
                android:id="@+id/imageView_aboutUs"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:srcCompat="@drawable/logo"
                android:layout_gravity="center"
                android:layout_weight="1"/>

            <com.example.kamal.saatzanhamrah.CustomTextView
                android:id="@+id/textView_aboutUs3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/app_name" />
            <com.example.kamal.saatzanhamrah.CustomTextView
                android:id="@+id/textView_aboutUs2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/version" />

            <com.example.kamal.saatzanhamrah.CustomTextView
                android:id="@+id/textView_aboutUs1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="start"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:text="@string/producer" />


            <com.example.kamal.saatzanhamrah.CustomTextView
                android:id="@+id/textView_aboutUs_email"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="start"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="16sp"
                android:text="@string/emailProducer"
                android:layout_weight="1" />

     <com.example.kamal.saatzanhamrah.CustomTextView
                android:id="@+id/textView_aboutUs4"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="start"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
         android:layout_marginTop="30dp"
                android:textSize="12sp"
                android:text="@string/entitlement" />





        </LinearLayout>
    </ScrollView>

</RelativeLayout>
